# automata

./: .gitignore  0.js  Cargo.toml  README.md  index.html  index.js  package.json  tsconfig.json  webpack.config.js
crate/: Cargo.toml
crate/src/: lib.rs  universe.rs
crates/automata/: Cargo.toml
crates/automata/src/: lib.rs
src/: index.html  index.ts  main.rs  renderer.ts  universe.rs  utils.ts
static/: index.html  nes-track.css
