[package]
name = "automata"
version = "0.1.0"
authors = ["jamie <jamie.y.parkinson@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
console_error_panic_hook = { version = "0.1.6", optional = true }
rand = { version = "0.7.2", features = ["wasm-bindgen"] }
wasm-bindgen = "0.2.47"
wee_alloc = { version = "0.4.4", optional = true }
