[package]
name = "automata"
version = "0.1.0"
authors = ["jamie <jamie.y.parkinson@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
console_error_panic_hook = { version = "0.1.6", optional = true }
rand = "0.7.2"
wasm-bindgen = "0.2.47"
web-sys = { version = "0.3.24", features = [ "console" ] }
wee_alloc = { version = "0.4.4", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2.47"
